# ota-image-libs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: renovate.json5
.github/workflows/: gen_requirements_txt.yaml  lock_file_management.yaml  release.yml  sync_lockfile.yml  test.yaml
docs/: annotations.md  image_config.md  image_index.md  image_spec.md  index_jwt.md  otaclient_package.md
scripts/: hatch_build_lock_deps.py
spec/: README.md  annotations.md  file_table.md  image_config.md  image_index.md  image_manifest.md  image_spec.md  index_jwt.md  media_types.md  ota_image_distribution.md  otaclient_package.md  resource_table.md  sys_config.md
src/ota_image_libs/: __init__.py  _version.py
src/ota_image_libs/_crypto/: __init__.py  jwt_utils.py  x509_utils.py
src/ota_image_libs/_resource_filter/: __init__.py  _common.py  _filter_config.py
src/ota_image_libs/common/: __init__.py  _common.py  db_utils.py  io.py  metafile_base.py  model_fields.py  model_spec.py  msgpack_utils.py  oci_spec.py
src/ota_image_libs/v1/: __init__.py  annotation_keys.py  consts.py  media_types.py  utils.py
src/ota_image_libs/v1/artifact/: __init__.py  pack.py  packer.py  read.py  reader.py
src/ota_image_libs/v1/file_table/: __init__.py  db.py  schema.py  utils.py
src/ota_image_libs/v1/image_config/: schema.py  sys_config.py
src/ota_image_libs/v1/image_index/: schema.py  utils.py
src/ota_image_libs/v1/image_manifest/: schema.py
src/ota_image_libs/v1/index_jwt/: __init__.py  schema.py  utils.py
src/ota_image_libs/v1/otaclient_package/: __init__.py  schema.py  utils.py
src/ota_image_libs/v1/resource_table/: __init__.py  db.py  schema.py  utils.py
src/ota_image_tools/: __main__.py  _utils.py  main.py
src/ota_image_tools/cmds/: __init__.py  deploy_image.py  get_filetable.py  get_resourcetable.py  inspect_blob.py  inspect_index.py  list_image.py  lookup_image.py  rebuild_rootfs.py  verify_resources.py  verify_sign.py
src/ota_image_tools/cmds/deploy_artifact/: _lib.py
src/ota_image_tools/cmds/deploy_image/: __init__.py  _cmd.py  _lib.py
src/ota_image_tools/libs/: __init__.py  common.py  deploy_image.py
tests/: README.md  __init__.py  conftest.py  test_artifact_reader.py  test_common.py  test_db_utils.py  test_deploy_image.py  test_file_table_db_integration.py  test_file_table_utils.py  test_get_filetable_cmd.py  test_get_resourcetable_cmd.py  test_image_index.py  test_index_jwt_utils.py  test_inspect_blob_cmd.py  test_inspect_index_cmd.py  test_io.py  test_jwt_utils.py  test_lookup_image_cmd.py  test_metafile_base.py  test_model_spec.py  test_msgpack_utils.py  test_oci_spec.py  test_otaclient_package_utils.py  test_resource_table_db.py  test_resource_table_utils.py  test_v1_utils.py  test_x509_utils.py
tests/scripts/: deep_verify_resources.py
