[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.20",
]

[project]
name = "ota-image-libs"
description = "OTA Image Libraries and Tools."
version = "0.0.1-dev0"
readme = "README.md"
license = "Apache-2.0"
license-files = [
  "LICENSE",
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "simple-sqlite3-orm~=0.12",
  "typing-extensions>=4.6.3",
]
urls.Source = "https://github.com/tier4/ota-image-libs"

[dependency-groups]
dev = [
  "coverage>=7,<8",
  "pre-commit>=3,<5",
  "pytest~=8.3",
  # pin pytest-asyncio to 0.23.8 for now,
  #   as 0.24 and newer will break the tests.
  "pytest-asyncio==0.23.8",
  "pytest-mock~=3.14",
  "requests-mock~=1.12",
  "ruff",
]


[tool.ruff]
line-length = 88
target-version = "py312"
# NOTE: not include tests and tools for now
include = [
  "tests/**/*.py",
  "src/**/*.py",
  "pyproject.toml",
]
extend-exclude = [
  "*_pb2.py*",
  "*_pb2_grpc.py*",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",   # pyflakes
  "Q",   # flake8-quotes
  "I",   # isort
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "ICN", # flake8-import-conventions
]
ignore = [
  "E266", # (too many leading '#'): sometimes we use multiple # for separting sections
  "E203", # (white space before ':'): this error conflicts with black linting
  "E701", # (multiple statements on one line)
  "S101", # (use of assert): mostly we use assert for typing
]

[tool.ruff.lint.pydocstyle]
convention = "google"